[package]
name = "thunder-rs"
version = "0.1.0"
edition = "2021"
authors = ["Egehan Dogan <edcd.dev@gmail.com>"]
description = "A high-performance HTTP and WebSocket server implementation in Rust"
repository = "https://github.com/egehandogan35/thunder-rs"
homepage = "https://github.com/egehandogan35/thunder-rs"
license = "MIT"
readme = "README.md"
keywords = ["websocket", "http", "server", "async", "networking"]
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket"]
exclude = [
    "/docker",
    "/.gitignore",
    "/examples",
    "/tests",
]

[dependencies]
base64 = "0.22.1"
crossbeam = "0.8.4"
encoding_rs = "0.8.34"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-util = { version = "0.1.3", features = ["full"] }
regex = "1.11.1"
serde = "1.0.203"
serde-xml-rs = "0.6.0"
serde_json = "1.0.117"
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"

[lib]
name = "thunder_rs"
path = "src/thunder-rs/lib.rs"

[features]
default = ["full"]
http = []
ws = []
full = ["http", "ws"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }